--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <title>React Boilerplate</title>
+        <title>Kopfrechner</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
-    <body>
+    <body style="max-width: 600px">
         <div id="app"></div>
-
         <script src="/assets/js/app.js"></script>
+
     </body>
 </html>
