--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Kopfrechner</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="w3.css">
+        <link rel="stylesheet" href="font-awesome.min.css">
     </head>
     <body style="max-width: 600px">
         <div id="app"></div>
